// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Omnitracking definitions \`Address Info Added\` return should match the snapshot 1`] = `
Object {
  "checkoutStep": "1",
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\"}",
  "interactionType": "click",
  "orderCode": "ABC12",
  "orderId": 12345678,
  "tid": 2911,
}
`;

exports[`Omnitracking definitions \`Billing Info Added\` return should match the snapshot 1`] = `
Object {
  "addressFinder": false,
  "basketCurrency": "USD",
  "basketValue": 100,
  "checkoutStep": "1",
  "orderCode": "ABC12",
  "promoCode": "promo",
  "tid": 3647,
}
`;

exports[`Omnitracking definitions \`Checkout Abandoned\` return should match the snapshot 1`] = `
Object {
  "checkoutStep": 2,
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\",\\"courierType\\":\\"Next Day\\"}",
  "interactionType": "click",
  "orderCode": "ABC12",
  "orderId": 12345678,
  "orderVAT": 1.24,
  "paymentType": "credit",
  "shipping": 10,
  "tid": 2084,
}
`;

exports[`Omnitracking definitions \`Checkout Started\` return should match the snapshot 1`] = `
Object {
  "basketCurrency": "USD",
  "basketValue": 100,
  "checkoutStep": 1,
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\",\\"courierType\\":\\"Next Day\\"}",
  "interactionType": "click",
  "lineItems": "[{\\"productId\\":\\"12345678\\",\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeId\\":1,\\"listIndex\\":2,\\"unitSalePrice\\":0}]",
  "loginType": "guest",
  "orderCode": "ABC12",
  "orderId": 12345678,
  "orderVAT": 1.23,
  "paymentType": "credit",
  "shipping": 10,
  "tid": 2918,
}
`;

exports[`Omnitracking definitions \`Checkout Step Editing\` return should match the snapshot 1`] = `
Object {
  "checkoutStep": 2,
  "orderCode": "ABC12",
  "orderId": 12345678,
  "tid": 2923,
}
`;

exports[`Omnitracking definitions \`Checkout Step Viewed\` return should match the snapshot 1`] = `
Object {
  "tid": 10097,
  "val": "{\\"type\\":\\"SUBMIT\\",\\"paymentAttemptReferenceId\\":\\"d9864a1c112d-47ff-8ee4-968c-5acecae23_1567010265879\\"}",
}
`;

exports[`Omnitracking definitions \`Delivery Method Added\` return should match the snapshot 1`] = `
Object {
  "basketCurrency": "USD",
  "basketValue": 100,
  "checkoutStep": 2,
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\",\\"courierType\\":\\"Next Day\\",\\"packagingType\\":\\"foo\\"}",
  "interactionType": "click",
  "lineItems": "[{\\"productId\\":\\"12345678\\",\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeId\\":1,\\"listIndex\\":2,\\"unitSalePrice\\":0}]",
  "orderCode": "ABC12",
  "orderId": 12345678,
  "promoCode": "PROMO_ABC",
  "tid": 3654,
}
`;

exports[`Omnitracking definitions \`Filters Applied\` return should match the snapshot 1`] = `
Object {
  "actionArea": "PLP",
  "filtersApplied": "{\\"brands\\":[2765,4062],\\"categories\\":[135973],\\"colors\\":[1],\\"discount\\":[0],\\"gender\\":[0],\\"price\\":[0,1950],\\"sizes\\":[16]}",
  "tid": 2917,
}
`;

exports[`Omnitracking definitions \`Filters Cleared\` return should match the snapshot 1`] = `
Object {
  "actionArea": "PLP",
  "filtersApplied": "{\\"brands\\":[2765,4062],\\"categories\\":[135973],\\"colors\\":[1],\\"discount\\":[0],\\"gender\\":[0],\\"price\\":[0,1950],\\"sizes\\":[16]}",
  "tid": 2921,
}
`;

exports[`Omnitracking definitions \`Interact Content\` return should match the snapshot 1`] = `
Object {
  "actionArea": "expanded",
  "contentType": "Navbar",
  "interactionType": "click",
  "tid": 2882,
  "val": "123",
}
`;

exports[`Omnitracking definitions \`Login\` return should match the snapshot 1`] = `
Object {
  "loginType": "Tenant",
  "tid": 2924,
}
`;

exports[`Omnitracking definitions \`Logout\` return should match the snapshot 1`] = `
Object {
  "tid": 431,
}
`;

exports[`Omnitracking definitions \`Order Completed\` return should match the snapshot 1`] = `
Object {
  "addressFinder": false,
  "checkoutStep": 5,
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\",\\"courierType\\":\\"Next Day\\",\\"packagingType\\":\\"foo\\"}",
  "orderCode": "ABC12",
  "orderId": undefined,
  "paymentType": "credit card",
  "tid": 2831,
}
`;

exports[`Omnitracking definitions \`Payment Info Added\` return should match the snapshot 1`] = `
Object {
  "checkoutStep": "1",
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\"}",
  "interactionType": "click",
  "orderCode": "ABC12",
  "orderId": 12345678,
  "selectedPaymentMethod": "credit",
  "tid": 2912,
}
`;

exports[`Omnitracking definitions \`Place Order Started\` return should match the snapshot 1`] = `
Array [
  Object {
    "tid": 10097,
    "val": "{\\"type\\":\\"TRANSACTION\\",\\"paymentAttemptReferenceId\\":\\"d9864a1c112d-47ff-8ee4-968c-5acecae23_1567010265879\\"}",
  },
  Object {
    "checkoutStep": 1,
    "orderCode": "ABC12",
    "promoCode": "promo",
    "shippingTotalValue": 10,
    "tid": 188,
    "val": "{\\"type\\":\\"TRANSACTION\\",\\"paymentAttemptReferenceId\\":\\"d9864a1c112d-47ff-8ee4-968c-5acecae23_1567010265879\\"}",
  },
]
`;

exports[`Omnitracking definitions \`Product Added to Cart\` return should match the snapshot 1`] = `
Object {
  "actionArea": "PDP",
  "lineItems": "[{\\"productId\\":\\"12345678\\",\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeId\\":1,\\"listIndex\\":2,\\"unitSalePrice\\":0}]",
  "listIndex": 3,
  "moduleId": "[\\"1234\\"]",
  "moduleTitle": "[\\"You may like\\"]",
  "priceCurrency": "EUR",
  "productId": "12345678",
  "tid": 2915,
}
`;

exports[`Omnitracking definitions \`Product Added to Wishlist\` return should match the snapshot 1`] = `
Object {
  "actionArea": "PDP",
  "isMainWishlist": true,
  "lineItems": "[{\\"productId\\":\\"12345678\\",\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeId\\":1,\\"listIndex\\":2,\\"unitSalePrice\\":0}]",
  "listIndex": 3,
  "moduleId": "[\\"1234\\"]",
  "moduleTitle": "[\\"You may like\\"]",
  "priceCurrency": "EUR",
  "productId": "12345678",
  "tid": 2916,
  "wishlistId": "4c040892-cc27-4294-99e3-524b14eddf33",
}
`;

exports[`Omnitracking definitions \`Product Clicked\` return should match the snapshot 1`] = `
Object {
  "actionArea": "PDP",
  "lineItems": "[{\\"productId\\":\\"12345678\\",\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeId\\":1,\\"listIndex\\":2,\\"unitSalePrice\\":0}]",
  "listIndex": 3,
  "moduleId": "[\\"1234\\"]",
  "moduleTitle": "[\\"You may like\\"]",
  "productId": "12345678",
  "tid": 2926,
}
`;

exports[`Omnitracking definitions \`Product List Viewed\` return should match the snapshot 1`] = `
Object {
  "actionArea": "PLP",
  "lineItems": "[{\\"productId\\":\\"507f1f77bcf86cd799439011\\",\\"itemPromotion\\":6,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":25,\\"sizeId\\":1,\\"listIndex\\":2,\\"unitSalePrice\\":19},{\\"productId\\":\\"507f1f77bcf86cd799439012\\",\\"itemPromotion\\":6,\\"category\\":\\"\\",\\"itemFullPrice\\":25,\\"listIndex\\":3,\\"unitSalePrice\\":19}]",
  "moduleId": "[\\"12345\\"]",
  "moduleTitle": "[\\"Woman shopping\\"]",
  "tid": 2832,
}
`;

exports[`Omnitracking definitions \`Product Removed From Wishlist\` return should match the snapshot 1`] = `
Object {
  "actionArea": "PDP",
  "isMainWishlist": true,
  "lineItems": "[{\\"productId\\":\\"12345678\\",\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeId\\":1,\\"listIndex\\":2,\\"unitSalePrice\\":0}]",
  "listIndex": 3,
  "moduleId": "[\\"1234\\"]",
  "moduleTitle": "[\\"You may like\\"]",
  "priceCurrency": "EUR",
  "productId": "12345678",
  "tid": 2925,
  "wishlistId": "4c040892-cc27-4294-99e3-524b14eddf33",
}
`;

exports[`Omnitracking definitions \`Product Removed from Cart\` return should match the snapshot 1`] = `
Object {
  "actionArea": "PDP",
  "lineItems": "[{\\"productId\\":\\"12345678\\",\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeId\\":1,\\"listIndex\\":2,\\"unitSalePrice\\":0}]",
  "listIndex": 3,
  "moduleId": "[\\"1234\\"]",
  "moduleTitle": "[\\"You may like\\"]",
  "priceCurrency": "EUR",
  "productId": "12345678",
  "tid": 131,
}
`;

exports[`Omnitracking definitions \`Product Updated\` return should match the snapshot 1`] = `
Array [
  Object {
    "actionArea": "PDP",
    "colourList": "2, 1",
    "listIndex": 2,
    "productId": "12345",
    "storeId": "123",
    "tid": 2098,
  },
  Object {
    "actionArea": "PDP",
    "itemSize": "S",
    "listIndex": 2,
    "productId": "12345",
    "scaleList": "10, 12",
    "sizeList": "11, 10",
    "storeId": "123",
    "tid": 2920,
  },
  Object {
    "actionArea": "PDP",
    "itemQuantity": 2,
    "listIndex": 2,
    "productId": "12345",
    "storeId": "123",
    "tid": 2919,
  },
]
`;

exports[`Omnitracking definitions \`Promocode Applied\` return should match the snapshot 1`] = `
Object {
  "errorMessage": "No promocode available.",
  "hasError": true,
  "orderCode": "ABC12",
  "orderId": 12345678,
  "promoCode": "PROMO_ABC",
  "tid": 311,
}
`;

exports[`Omnitracking definitions \`Review Checkout\` return should match the snapshot 1`] = `
Object {
  "basketCurrency": "USD",
  "basketValue": 100,
  "checkoutStep": 1,
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\",\\"courierType\\":\\"Next Day\\",\\"packagingType\\":\\"foo\\"}",
  "interactionType": "click",
  "orderCode": "ABC12",
  "orderId": 12345678,
  "orderVAT": 1.23,
  "paymentType": "credit",
  "promoCode": "PROMO_ABC",
  "shippingTotalValue": 10,
  "tid": 3648,
}
`;

exports[`Omnitracking definitions \`Select Content\` return should match the snapshot 1`] = `
Object {
  "contentType": "Navbar",
  "interactionType": "click",
  "productId": "12345",
  "tid": 2895,
  "val": "123",
}
`;

exports[`Omnitracking definitions \`Share\` return should match the snapshot 1`] = `
Object {
  "actionArea": "share_button_facebook",
  "productId": "123",
  "tid": 1205,
}
`;

exports[`Omnitracking definitions \`Shipping Info Added\` return should match the snapshot 1`] = `
Object {
  "checkoutStep": "2",
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\"}",
  "interactionType": "click",
  "orderCode": "ABC12",
  "orderId": 12345678,
  "selectedPaymentMethod": "credit",
  "tid": 2914,
}
`;

exports[`Omnitracking definitions \`Shipping Method Added\` return should match the snapshot 1`] = `
Object {
  "checkoutStep": "2",
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\"}",
  "interactionType": "click",
  "orderCode": "ABC12",
  "orderId": 12345678,
  "selectedPaymentMethod": "credit",
  "tid": 2913,
}
`;

exports[`Omnitracking definitions \`Sign-up Form Completed\` return should match the snapshot 1`] = `
Object {
  "loginType": "Tenant",
  "tid": 2927,
}
`;

exports[`Omnitracking definitions \`Sign-up Form Viewed\` return should match the snapshot 1`] = `
Object {
  "tid": 10097,
  "val": "{\\"type\\":\\"REGISTER\\",\\"paymentAttemptReferenceId\\":\\"d9864a1c112d-47ff-8ee4-968c-5acecae23_1567010265879\\"}",
}
`;

exports[`Omnitracking definitions \`Sign-up Newsletter\` return should match the snapshot 1`] = `
Object {
  "gender": "Woman,Man",
  "tid": 1040,
}
`;

exports[`Omnitracking definitions \`Site Performance\` return should match the snapshot 1`] = `
Object {
  "performanceTimings": "{\\"ttfb\\":766.2,\\"dcl\\":2716.1,\\"fp\\":1545.1}",
  "tid": 1217,
}
`;

exports[`Omnitracking definitions \`bag\` return should match the snapshot 1`] = `
Object {
  "basketQuantity": 8,
  "basketValue": 100,
  "lineItems": "[{\\"productId\\":\\"12345678\\",\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeId\\":1,\\"itemQuantity\\":5,\\"unitSalePrice\\":0},{\\"productId\\":\\"98765\\",\\"itemPromotion\\":1,\\"designerName\\":\\"shirt designer name\\",\\"category\\":\\"shirt\\",\\"itemFullPrice\\":1,\\"sizeId\\":1,\\"itemQuantity\\":3,\\"unitSalePrice\\":0}]",
  "viewSubType": "Bag",
  "viewType": "Shopping Bag",
}
`;

exports[`Omnitracking definitions \`checkout\` return should match the snapshot 1`] = `
Object {
  "orderCode": "ASH12",
  "orderId": undefined,
  "orderValue": 100,
  "shippingTotalValue": 10,
  "viewSubType": "Checkout SPA",
  "viewType": "Checkout SPA",
}
`;

exports[`Omnitracking definitions \`pageDefinitions\` should match snapshot 1`] = `
Object {
  "CheckoutPageVisited": Array [
    "abTests",
    "assistantUserId",
    "baselinePolicies",
    "basketId",
    "basketQuantity",
    "categoryIdList",
    "checkboxFilter",
    "clientAdvertisingId",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "communicationPreferences",
    "crossDeviceCorrelationId",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "domainUrl",
    "elementsSeen",
    "exitInteraction",
    "fittingRoomId",
    "fittingRoomList",
    "geoLocationCity",
    "geoLocationState",
    "hasAttachment",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "isBot",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "quantityList",
    "recommendationSource",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "sessionId",
    "startedTyping",
    "stockpointId",
    "stylistId",
    "suggestionType",
    "url",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenId",
    "weChatUnionId",
    "wishlistQuantity",
    "accessTier",
    "actionArea",
    "advertisingConsent",
    "analyticsPackageVersion",
    "appointmentDetails",
    "basketCurrency",
    "basketValue",
    "bookmarkId",
    "bookmarkItemList",
    "boostRanking",
    "bundleAttributes",
    "bundleId",
    "categoryName",
    "clientCountry",
    "clientTimestamp",
    "clientVersion",
    "department",
    "dismiss",
    "dropDownListOptions",
    "errorMessage",
    "fittingRoomName",
    "functionalConsent",
    "geoLocation",
    "hasError",
    "hasNewMessages",
    "inputType",
    "integrationId",
    "ip",
    "isCustomer",
    "isMainWishlist",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "lineItems",
    "listIndex",
    "loginType",
    "merchantLocationId",
    "messageComponentsList",
    "messageId",
    "messageNumber",
    "partnerDocuments",
    "performanceConsent",
    "promotionValue",
    "pushPayload",
    "requestId",
    "requestStatus",
    "scrollDepth",
    "searchQuery",
    "searchResultCount",
    "selectedPaymentMethod",
    "shipmentIndex",
    "shipmentQuantity",
    "skuItemList",
    "status",
    "storeConnections",
    "storeId",
    "submittedQuery",
    "subscriptionId",
    "tagList",
    "taskManager",
    "uniqueViewId",
    "userAgent",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "uuid",
    "variantId",
    "applePayStatus",
    "availablePaymentOptions",
    "checkoutOrderId",
    "checkoutStep",
    "defaultPaymentMethod",
    "isShippingAddressClickAndCollect",
    "orderCode",
    "orderCurrency",
    "orderValue",
    "orderVAT",
    "productCount",
    "promoCode",
    "saleProductCount",
    "selectableFieldsList",
    "shippingTotalValue",
    "shippingTypeFee",
    "userCheckoutType",
  ],
  "GenericPageVisited": Array [
    "abTests",
    "assistantUserId",
    "baselinePolicies",
    "basketId",
    "basketQuantity",
    "categoryIdList",
    "checkboxFilter",
    "clientAdvertisingId",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "communicationPreferences",
    "crossDeviceCorrelationId",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "domainUrl",
    "elementsSeen",
    "exitInteraction",
    "fittingRoomId",
    "fittingRoomList",
    "geoLocationCity",
    "geoLocationState",
    "hasAttachment",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "isBot",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "quantityList",
    "recommendationSource",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "sessionId",
    "startedTyping",
    "stockpointId",
    "stylistId",
    "suggestionType",
    "url",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenId",
    "weChatUnionId",
    "wishlistQuantity",
    "accessTier",
    "actionArea",
    "advertisingConsent",
    "analyticsPackageVersion",
    "appointmentDetails",
    "basketCurrency",
    "basketValue",
    "bookmarkId",
    "bookmarkItemList",
    "boostRanking",
    "bundleAttributes",
    "bundleId",
    "categoryName",
    "clientCountry",
    "clientTimestamp",
    "clientVersion",
    "department",
    "dismiss",
    "dropDownListOptions",
    "errorMessage",
    "fittingRoomName",
    "functionalConsent",
    "geoLocation",
    "hasError",
    "hasNewMessages",
    "inputType",
    "integrationId",
    "ip",
    "isCustomer",
    "isMainWishlist",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "lineItems",
    "listIndex",
    "loginType",
    "merchantLocationId",
    "messageComponentsList",
    "messageId",
    "messageNumber",
    "partnerDocuments",
    "performanceConsent",
    "promotionValue",
    "pushPayload",
    "requestId",
    "requestStatus",
    "scrollDepth",
    "searchQuery",
    "searchResultCount",
    "selectedPaymentMethod",
    "shipmentIndex",
    "shipmentQuantity",
    "skuItemList",
    "status",
    "storeConnections",
    "storeId",
    "submittedQuery",
    "subscriptionId",
    "tagList",
    "taskManager",
    "uniqueViewId",
    "userAgent",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "uuid",
    "variantId",
    "attributesList",
    "categoryList",
    "colourList",
    "deliveryOptions",
    "deliveryOptionsDetails",
    "designerList",
    "discount",
    "filtersApplied",
    "filterType",
    "interactionType",
    "marketType",
    "orderSummary",
    "pageNumber",
    "priceFilter",
    "returnId",
    "scaleList",
    "selectableFieldsList",
    "selectedOrderType",
    "sizeList",
    "orderDetails",
    "orderList",
    "paymentStatus",
    "shippingTotalValue",
    "shippingTypeFee",
    "tagSkuList",
    "productId",
  ],
  "ListingPageVisited": Array [
    "abTests",
    "assistantUserId",
    "baselinePolicies",
    "basketId",
    "basketQuantity",
    "categoryIdList",
    "checkboxFilter",
    "clientAdvertisingId",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "communicationPreferences",
    "crossDeviceCorrelationId",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "domainUrl",
    "elementsSeen",
    "exitInteraction",
    "fittingRoomId",
    "fittingRoomList",
    "geoLocationCity",
    "geoLocationState",
    "hasAttachment",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "isBot",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "quantityList",
    "recommendationSource",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "sessionId",
    "startedTyping",
    "stockpointId",
    "stylistId",
    "suggestionType",
    "url",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenId",
    "weChatUnionId",
    "wishlistQuantity",
    "accessTier",
    "actionArea",
    "advertisingConsent",
    "analyticsPackageVersion",
    "appointmentDetails",
    "basketCurrency",
    "basketValue",
    "bookmarkId",
    "bookmarkItemList",
    "boostRanking",
    "bundleAttributes",
    "bundleId",
    "categoryName",
    "clientCountry",
    "clientTimestamp",
    "clientVersion",
    "department",
    "dismiss",
    "dropDownListOptions",
    "errorMessage",
    "fittingRoomName",
    "functionalConsent",
    "geoLocation",
    "hasError",
    "hasNewMessages",
    "inputType",
    "integrationId",
    "ip",
    "isCustomer",
    "isMainWishlist",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "lineItems",
    "listIndex",
    "loginType",
    "merchantLocationId",
    "messageComponentsList",
    "messageId",
    "messageNumber",
    "partnerDocuments",
    "performanceConsent",
    "promotionValue",
    "pushPayload",
    "requestId",
    "requestStatus",
    "scrollDepth",
    "searchQuery",
    "searchResultCount",
    "selectedPaymentMethod",
    "shipmentIndex",
    "shipmentQuantity",
    "skuItemList",
    "status",
    "storeConnections",
    "storeId",
    "submittedQuery",
    "subscriptionId",
    "tagList",
    "taskManager",
    "uniqueViewId",
    "userAgent",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "uuid",
    "variantId",
    "categoryId",
    "collectionId",
    "designerId",
    "designerName",
    "didYouMean",
    "itemRankTypeList",
    "outfitId",
    "promotionId",
    "recsType",
    "saleType",
    "seasonId",
    "setId",
    "skuItemsListWithSimilar",
    "sortOption",
  ],
  "ProductPageVisited": Array [
    "abTests",
    "assistantUserId",
    "baselinePolicies",
    "basketId",
    "basketQuantity",
    "categoryIdList",
    "checkboxFilter",
    "clientAdvertisingId",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "communicationPreferences",
    "crossDeviceCorrelationId",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "domainUrl",
    "elementsSeen",
    "exitInteraction",
    "fittingRoomId",
    "fittingRoomList",
    "geoLocationCity",
    "geoLocationState",
    "hasAttachment",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "isBot",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "quantityList",
    "recommendationSource",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "sessionId",
    "startedTyping",
    "stockpointId",
    "stylistId",
    "suggestionType",
    "url",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenId",
    "weChatUnionId",
    "wishlistQuantity",
    "accessTier",
    "actionArea",
    "advertisingConsent",
    "analyticsPackageVersion",
    "appointmentDetails",
    "basketCurrency",
    "basketValue",
    "bookmarkId",
    "bookmarkItemList",
    "boostRanking",
    "bundleAttributes",
    "bundleId",
    "categoryName",
    "clientCountry",
    "clientTimestamp",
    "clientVersion",
    "department",
    "dismiss",
    "dropDownListOptions",
    "errorMessage",
    "fittingRoomName",
    "functionalConsent",
    "geoLocation",
    "hasError",
    "hasNewMessages",
    "inputType",
    "integrationId",
    "ip",
    "isCustomer",
    "isMainWishlist",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "lineItems",
    "listIndex",
    "loginType",
    "merchantLocationId",
    "messageComponentsList",
    "messageId",
    "messageNumber",
    "partnerDocuments",
    "performanceConsent",
    "promotionValue",
    "pushPayload",
    "requestId",
    "requestStatus",
    "scrollDepth",
    "searchQuery",
    "searchResultCount",
    "selectedPaymentMethod",
    "shipmentIndex",
    "shipmentQuantity",
    "skuItemList",
    "status",
    "storeConnections",
    "storeId",
    "submittedQuery",
    "subscriptionId",
    "tagList",
    "taskManager",
    "uniqueViewId",
    "userAgent",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "uuid",
    "variantId",
    "applePayStatus",
    "categoryId",
    "collectionId",
    "complementaryLookType",
    "designerId",
    "designerName",
    "hasVto",
    "itemColourId",
    "lookId",
    "numberOfColours",
    "numberOfSizes",
    "numberOfSizesInStore",
    "outfitId",
    "rankType",
    "reviews",
    "seasonId",
    "totalStock",
    "totalStockInStore",
    "unitFullPrice",
    "unitSalePrice",
    "productId",
  ],
}
`;

exports[`Omnitracking definitions \`pageEventsFilter\` should match snapshot 1`] = `
Object {
  "CheckoutPageVisited": Array [
    "checkout",
    "checkout-delivery-method",
    "checkout-payment",
    "checkout-review",
    "checkout-shipping",
    "Checkout",
    "confirm",
    "payment",
  ],
  "ListingPageVisited": Array [
    "product-listing",
    "search",
    "ProductList",
    "listing",
    "search",
    "sets",
  ],
  "ProductPageVisited": Array [
    "product-details",
    "ProductDetail",
    "product",
  ],
}
`;

exports[`Omnitracking definitions \`product-details\` return should match the snapshot 1`] = `
Object {
  "lineItems": "[{\\"productId\\":\\"12345678\\",\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeId\\":1,\\"unitSalePrice\\":0},{\\"productId\\":\\"98765\\",\\"itemPromotion\\":1,\\"designerName\\":\\"shirt designer name\\",\\"category\\":\\"shirt\\",\\"itemFullPrice\\":1,\\"sizeId\\":1,\\"unitSalePrice\\":0}]",
  "listIndex": 3,
  "moduleId": "[\\"5c1e447a-b14b-43a5-b010-2190f3366fad\\"]",
  "moduleTitle": "[\\"Recommendations\\"]",
  "productId": "12345678",
  "unitSalePrice": undefined,
  "viewSubType": "Product",
  "viewType": "Product",
}
`;

exports[`Omnitracking definitions \`product-listing\` return should match the snapshot 1`] = `
Object {
  "lineItems": "[{\\"productId\\":\\"12345678\\",\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeId\\":1,\\"unitSalePrice\\":0},{\\"productId\\":\\"98765\\",\\"itemPromotion\\":1,\\"designerName\\":\\"shirt designer name\\",\\"category\\":\\"shirt\\",\\"itemFullPrice\\":1,\\"sizeId\\":1,\\"unitSalePrice\\":0}]",
  "viewSubType": "Listing",
  "viewType": "Listing",
}
`;

exports[`Omnitracking definitions \`trackDefinitions\` should match snapshot 1`] = `
Array [
  "categoryId",
  "checkoutOrderId",
  "contentProvider",
  "contentType",
  "countPromoProducts",
  "countSaleProducts",
  "deeplinkSource",
  "deliveryInformationDetails",
  "designerId",
  "designerName",
  "dropDownListSelection",
  "filterArea",
  "filtersAutoAppliedSource",
  "filtersAvailable",
  "filtersCoordinates",
  "filtersIsVisible",
  "fittingRoomQuantity",
  "imageNumber",
  "isFixedMerchant",
  "itemColourId",
  "itemCoordinates",
  "itemListName",
  "itemQuantity",
  "itemSize",
  "loadItemCoordinate",
  "moduleBenefit",
  "moduleContentDepartment",
  "moduleContentId",
  "moduleContentName",
  "moduleContentPublicationDate",
  "moduleContentVersion",
  "moduleId",
  "moduleLoadTime",
  "modulePublicationDate",
  "moduleState",
  "moduleType",
  "moduleVersion",
  "moduleWasInteracted",
  "moduleWasSeen",
  "numberOfColours",
  "orderCode",
  "orderCodeId",
  "orderValue",
  "orderVAT",
  "partnersSubscriptionList",
  "productCount",
  "productPackagingOptions",
  "promoCode",
  "promotionDetails",
  "provider",
  "recommendationsId",
  "recommendationsModuleName",
  "recommendationsProductList",
  "recommendationsStrategy",
  "recsLoaded",
  "recsRequested",
  "recsStrategy",
  "recsType",
  "refundInformationDetails",
  "shippingTotalValue",
  "slotIndex",
  "sortOption",
  "sourceDescription",
  "sourceGroupDescription",
  "sourceId",
  "sourceType",
  "sourceWasSeen",
  "targetId",
  "targetType",
  "totalOriginalAmount",
  "totalSaleDiscount",
  "totalStock",
  "totalStockInStore",
  "unitFullPrice",
  "unitSalePrice",
  "wishlistId",
  "productId",
  "accessTier",
  "actionArea",
  "advertisingConsent",
  "analyticsPackageVersion",
  "appointmentDetails",
  "basketCurrency",
  "basketValue",
  "bookmarkId",
  "bookmarkItemList",
  "boostRanking",
  "bundleAttributes",
  "bundleId",
  "categoryName",
  "clientCountry",
  "clientTimestamp",
  "clientVersion",
  "department",
  "dismiss",
  "dropDownListOptions",
  "errorMessage",
  "fittingRoomName",
  "functionalConsent",
  "geoLocation",
  "hasError",
  "hasNewMessages",
  "inputType",
  "integrationId",
  "ip",
  "isCustomer",
  "isMainWishlist",
  "itemPriceList",
  "itemSalePriceList",
  "itemStockList",
  "itemStoreList",
  "lineItems",
  "listIndex",
  "loginType",
  "merchantLocationId",
  "messageComponentsList",
  "messageId",
  "messageNumber",
  "partnerDocuments",
  "performanceConsent",
  "promotionValue",
  "pushPayload",
  "requestId",
  "requestStatus",
  "scrollDepth",
  "searchQuery",
  "searchResultCount",
  "selectedPaymentMethod",
  "shipmentIndex",
  "shipmentQuantity",
  "skuItemList",
  "status",
  "storeConnections",
  "storeId",
  "submittedQuery",
  "subscriptionId",
  "tagList",
  "taskManager",
  "uniqueViewId",
  "userAgent",
  "utmCampaign",
  "utmContent",
  "utmMedium",
  "utmSource",
  "utmTerm",
  "uuid",
  "variantId",
  "attributesList",
  "categoryList",
  "colourList",
  "deliveryOptions",
  "deliveryOptionsDetails",
  "designerList",
  "discount",
  "filtersApplied",
  "filterType",
  "interactionType",
  "marketType",
  "orderSummary",
  "pageNumber",
  "priceFilter",
  "returnId",
  "scaleList",
  "selectableFieldsList",
  "selectedOrderType",
  "sizeList",
  "val",
  "tid",
]
`;

exports[`Omnitracking definitions \`wishlist\` return should match the snapshot 1`] = `
Object {
  "lineItems": "[{\\"productId\\":\\"12345678\\",\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeId\\":1,\\"itemQuantity\\":2,\\"unitSalePrice\\":0},{\\"productId\\":\\"98765\\",\\"itemPromotion\\":1,\\"designerName\\":\\"shirt designer name\\",\\"category\\":\\"shirt\\",\\"itemFullPrice\\":1,\\"sizeId\\":1,\\"itemQuantity\\":3,\\"unitSalePrice\\":0}]",
  "viewSubType": "Wishlist",
  "viewType": "Wishlist",
  "wishlistQuantity": 5,
}
`;
